--- a/huanf-xue-gateway/pom.xml
+++ b/huanf-xue-gateway/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>huanf-xue-content</artifactId>
+        <artifactId>SpringBootXue</artifactId>
 
         <groupId>com.huanf</groupId>
 
@@ -13,47 +13,26 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xue-content-service</artifactId>
+    <artifactId>huanf-xue-gateway</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>com.huanf</groupId>
-
-            <artifactId>huanf-xue-base</artifactId>
-
-            <version>1.0-SNAPSHOT</version>
-
-        </dependency>
-
-        <dependency>
-            <groupId>com.huanf</groupId>
-
-            <artifactId>xue-content-model</artifactId>
-
-            <version>1.0-SNAPSHOT</version>
-
-        </dependency>
-
-        <!--cloud的基础环境包-->
+        <!--网关-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
 
-            <artifactId>spring-cloud-context</artifactId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
 
         </dependency>
 
-        <!-- Spring Boot 的 Spring Web MVC 集成 -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-
-            <artifactId>spring-boot-starter-web</artifactId>
-
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
-        <!--nacos-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
+
 
     </dependencies>
 
