--- a/huanf-xue-content/pom.xml
+++ b/huanf-xue-content/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>mysql-connector-java</artifactId>
 
         </dependency>
+        <!-- Spring Boot 对结果视图 Freemarker 集成 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
