课程发布任务调度

--- a/huanf-xue-content/pom.xml
+++ b/huanf-xue-content/pom.xml
@@ -38,6 +38,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.huanf</groupId>
+            <artifactId>huanf-xue-sdk</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
