--- a/huanf-xue-content/xue-content-service/pom.xml
+++ b/huanf-xue-content/xue-content-service/pom.xml
@@ -54,7 +54,21 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
-
+        <!--SDK工具包-->
+        <dependency>
+            <groupId>com.huanf</groupId>
+            <artifactId>huanf-xue-sdk</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!--xxl-job-->
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
