--- a/huanf-xue-content/xue-content-service/pom.xml
+++ b/huanf-xue-content/xue-content-service/pom.xml
@@ -93,6 +93,10 @@
             <artifactId>feign-form-spring</artifactId>
             <version>3.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
 
     </dependencies>
 
